# Tauri-PDF-Summarizer

./: .gitignore  DEMO_SCRIPT.md  PROJECT_SUMMARY.md  README.md  SETUP.md  build.bat  build.sh  demo.html  index.html  package-lock.json  package.json  sample-tender.txt  test-mock.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
